--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -47,6 +47,8 @@
         </div>
       </div>
     <% end %>
+    <% else %>
+    <p class="lead">There are no events scheduled at this time. Please check back again.</p>
   <% end %>
 </div>
 
