--- a/app/views/goodcauses/_form.html.erb
+++ b/app/views/goodcauses/_form.html.erb
@@ -8,8 +8,8 @@
   <%= f.label :details, 'Details' %>
   <%= f.text_area :details, class: "form-control" %>
 
-  <%= f.label :cost, 'Cost to completion' %>
-  <%= f.text_field :cost, class: "form-control" %>
+  <%= f.label :suggested, 'Suggested Donation' %>
+  <%= f.text_field :suggested, class: "form-control" %>
 
   <%= f.label :image, 'Image' %>
   <%= f.file_field :image%>
