--- a/app/views/goodcauses/index.html.erb
+++ b/app/views/goodcauses/index.html.erb
@@ -26,7 +26,7 @@
           <h3><%= cause.name %></h3>
           <p><%= cause.details %></p><br/>
           <p class="copy-bottom"><strong>Suggested gift: </strong><br/>
-            USD $<%= cause.cost %></p>
+            USD $<%= cause.suggested %></p>
           <%= link_to "Contribute", students_path, :class => "btn btn-yellow" %>
         </div>
       <% end %>
