--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -148,7 +148,7 @@
                   <hr>
                   <li><strong>WHO WE ARE</strong></li>
                   <!-- <li><a href="/pages/redsweater">The Red Sweater</a></li> -->
-                  <li><%= link_to 'Our focus', "/pages/ourfocus" %></li>
+                  <li><%= link_to 'Our Focus', "/pages/ourfocus" %></li>
                   <li><a href="/pages/ourstory">Our Story</a></li>
                   <li><a href="/pages/theteam">The Team</a></li>
                   <hr>
@@ -203,7 +203,7 @@
             <a href="https://www.facebook.com/redsweaterproject/" target="_blank"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
             <a href="https://www.instagram.com/redsweaterproject/" target="_blank"><%= image_tag("insta.png", :class => "img-responsive")%></a>
           </div>
-          <h5 class="copyright"> &copy;Copyright Red Sweater Project 2016  |  All Rights Reserved  | Site by JD Design</h5>
+          <h5 class="copyright"> &copy;2017 Red Sweater Project  |  All Rights Reserved  | Site by JD Design</h5>
         </div>
       </footer>
     </div>
