--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,11 +1,6 @@
 <div class="flex page-canvas">
   <div class="flex-item-1col">
     <h2>FREQUENTLY ASKED QUESTIONS</h2>
-    <h5><strong>HOW MUCH DOES IT COST TO SEND A STUDENT TO SCHOOL?</strong></h5>
-    <p>The cost of sending one child to school beyond the 5th grade is $500/year, or 1.5 times the average family's income. The Mungere Schools provide quality education at a fraction of the cost. Parents contribute $15/year, and as well as time spent volunteering on campus and attending Parent Teacher conferences.
-    </p>
-
-    <hr>
 
     <h5><strong>WHY BUILD A SECONDARY SCHOOL IN RURAL TANZANIA?</strong></h5>
     <br/>
@@ -27,8 +22,9 @@
     <hr>
 
     <h5><strong>HOW COMPETITIVE IS STUDENT ADMISSION?</strong></h5>
+    <br/>
     <p>
-      Each year, around 200 students apply for one of the 40 spots at the Mungere School. The criteria for admission include two entrance exam scores, interviews, and visits to each child’s home. Home visits serve to determine proximity to the school and that the student lives within the school boundary, as well as to speak with parents and family members regarding their support of the child’s education and commitment to the future.
+      Each year, around 200 students apply for one of the 40 spots at the Mungere School. The criteria for admission include two entrance exam scores, interviews, and visits to each child’s home. Home visits serve to determine proximity to the school, ensuring that the student lives within the school boundary, as well as to speak with parents and family members regarding their support of the child’s education and commitment to the future.
     </p>
 
     <hr>
@@ -46,17 +42,18 @@
     <p>
     Student sponsorship is a special way to provide an opportunity for a child. The quality education provided at The Mungere School allows students to believe in their futures beyond the cycle of poverty of the generations before them.
     </p>
+    <p>Visit the <%= link_to 'sponsorship page', students_path %> to learn more about becoming a sponsor.</p>
 
     <hr>
 
     <h5><strong>HOW CAN I JOIN THE RED SWEATER PROJECT TEAM IN TANZANIA?</strong></h5>
     <br/>
     <p>
-    Review our open positions on our <%= link_to "Volunteer page", volunteers_path %> page and send a current CV and cover letter detailing relevant experience to <a href="mailto:volunteer@redsweaterproject.org">volunteer@redsweaterproject.org</a>.</p>
+    Review our open positions on our <%= link_to "Volunteer page", volunteers_path %> and send a current CV and cover letter detailing relevant experience to <a href="mailto:volunteer@redsweaterproject.org">volunteer@redsweaterproject.org</a>.</p>
 
     <hr>
 
-    <h5><strong>WHAT IF I'M INTERESTED IN VOLUNTEERING, BUT A POSITION ISN'T LISTED IN MY AREA OF EXPERTISE?</strong></h5>
+    <h5><strong>WHAT IF I'M INTERESTED IN VOLUNTEERING BUT A POSITION ISN'T LISTED IN MY AREA OF EXPERTISE?</strong></h5>
     <br/>
     <p>
     From engineering to computer information technology to sustainable farming, The Mungere School utilizes a broad range of skills from a worldwide team of dedicated professionals. If you’re interested in joining our team but you don’t see a role that matches your skills listed on the Volunteer page, email  us at <a href="mailto:volunteer@redsweaterproject.com">volunteer@redsweaterproject.com</a>. We’d love to chat.
