--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -194,7 +194,7 @@ h6 {
   font-size: 13px;
   line-height: 13px; }
 
-p {
+p, li {
   font-size: 1.25em;
   line-height: 1.5em;
   font-family: "proxima-nova", sans-serif;
@@ -1376,16 +1376,18 @@ form.donate-left {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 20px;
-  height: 450px;
+  min-height: 550px;
   position: relative; }
   .sponsor-students .btn.btn-yellow {
     position: absolute;
     bottom: 1em;
     width: 90%; }
-  .sponsor-students p, .sponsor-students h3 {
+  .sponsor-students p, .sponsor-students h3, .sponsor-students h5 {
     padding-right: 20px;
     padding-left: 20px;
     margin-top: 15px; }
+    .sponsor-students p a, .sponsor-students h3 a, .sponsor-students h5 a {
+      padding-left: 0; }
   .sponsor-students img {
     width: 100%;
     margin: 0 auto;
