--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -85,7 +85,7 @@ h6
   font-size: 13px
   line-height: 13px
 
-p
+p, li
   font-size: 1.25em
   line-height: 1.5em
   font-family: 'proxima-nova', sans-serif
