--- a/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
+++ b/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
@@ -18,16 +18,18 @@
   padding-left: 0
   padding-right: 0
   padding-bottom: 20px
-  height: 450px
+  min-height: 550px
   position: relative
   .btn.btn-yellow
     position: absolute
     bottom: 1em
     width: 90%
-  p, h3
+  p, h3, h5
     padding-right: 20px
     padding-left: 20px
     margin-top: 15px
+    a
+      padding-left: 0
   img
     width: 100%
     margin: 0 auto
