--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -67,13 +67,13 @@
     <div class="row">
 
       <div class="col-sm-3 text-center">
-        <h3 class="" style="color:#e61e26"><i class="fa fa-heartbeat text-center" aria-hidden="true"></i><br/>Medicine and Healthcare</h3>
+        <p class="" style="color:#e61e26"><strong><i class="fa fa-heartbeat text-center" aria-hidden="true"></i><br/>Medicine and Healthcare</strong></p>
       </div>
       <div class="col-sm-5 text-center">
-        <h3 class="" style="color:#febe10"><i class="fa fa-cutlery text-center" aria-hidden="true"></i><br/>Nutritious Meals</h3>
+        <p class="" style="color:#febe10"><strong><i class="fa fa-cutlery text-center" aria-hidden="true"></i><br/>Nutritious Meals</strong></p>
       </div>
       <div class="col-sm-3 text-center">
-        <h3 class="" style="color:#2877A0"><i class="fa fa-graduation-cap text-center" aria-hidden="true"></i><br/>Supportive Learning Environment</h3>
+        <p class="" style="color:#2877A0"><strong><i class="fa fa-graduation-cap text-center" aria-hidden="true"></i><br/>Supportive Learning Environment</strong></p>
       </div>
     </div>
 
