--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,6 +113,9 @@ header {
   color: #468847;
   text-align: left; }
 
+#privacy {
+  margin-top: 100px; }
+
 h1,
 h2,
 h3,
@@ -222,6 +225,8 @@ ul .padded li {
   letter-spacing: 0.5px;
   color: white;
   padding: 0 0 60px 0; }
+  .blue a:hover {
+    color: white; }
   .blue li, .blue p, .blue h3 {
     font-weight: 300;
     color: white; }
