--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -115,6 +115,10 @@ ul
   letter-spacing: .5px
   color: white
   padding: 0 0 60px 0
+  a
+    &:hover
+      color: white
+      // border-bottom: 1px solid white
   li, p, h3
     font-weight: 300
     color: white
