--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -9,15 +9,7 @@
   <div class="flex page-canvas">
     <div class="flex-item-1col">
       <h2>1. QUALITY EDUCATION</h2>
-      <p>Red Sweater Project's focus on quality education has set us apart since the beginning. Our success is not defined by the number of schools that we build, but by the effectiveness of our graduates as leaders in their communities. In 2013, Mungere students scored in the top quarter of schools in our region and second in the district. The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets quick results, while having a long term vision.</p>
-      <hr>
-      <strong><h5>WHAT DOES THE FUTURE HOLD?</h5></strong>
-      <p>
-        Learn about the vision for the Mungere School campus.
-      </p>
-      <div class="btns-wrapper">
-        <a href="/schools" class="btn btn-big btn-solid"><span>Check out the school</span></a>
-      </div>
+      <p>Red Sweater Project's focus on quality education has set us apart since the beginning. Our success is not defined by the number of schools that we build, but by the effectiveness of our graduates as leaders in their communities. In 2013, Mungere students scored in the top quarter of schools in our region and second in the district. In 2016, the school graduated its first Form IV class. Every Mungere graduate passed their national exams, compared to only 27% nationally. The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets quick results, while investing in a long term vision.</p>
     </div>
   </div>
 
@@ -29,13 +21,11 @@
   <div class="flex page-canvas">
     <div class="flex-item-1col">
       <h2>2. GENDER EQUALITY</h2>
-      <p>Boys don’t respect girls just because they’re told to. Boys respect girls when
-      they compete with them on a level playing field and see them win. Whether it’s in math, or on the soccer pitch, educating girls alongside boys can shift the thinking of an entire community.
-      We see this come to life every day at the Mungere School. Girls who first walked in the door with heads hung low, and eyes glued to the floor blossom into confident, smart young women who know they are intelligent and capable leaders. The young men who learn and grow alongside them cannot help but be changed.</p>
+      <p>Boys respect girls when they compete with them on a level playing field and see them win. Whether it’s in math, or on the soccer pitch, educating girls alongside boys can shift the thinking of an entire community. We see this come to life every day at the Mungere School. Girls who first walked in the door with heads hung low and eyes glued to the floor, blossom into confident, smart young women who know they are intelligent and capable leaders. The young men who learn and grow alongside them cannot help but be changed.</p>
       <hr>
       <strong><h5>TASIANA: A LEADER ON AND OFF THE PITCH</h5></strong>
       <p>
-        Read one teacher's account of student Tasiana's journey to becoming captain of the boys soccer team, and the impact she is having on her teammates.
+        Read one teacher's account of student Tasiana's journey to becoming captain of the boys soccer team and the impact she is having on her teammates.
       </p>
       <div class="btns-wrapper">
         <a href="#" class="btn btn-big btn-solid"><span>READ TASIANA'S STORY</span></a>
@@ -51,7 +41,7 @@
   <div class="flex page-canvas">
     <div class="flex-item-1col">
       <h2>3. RESPONSIBLE INNOVATION</h2>
-      <p>Learning to power a computer lab with the sun, to turn waste into compost, and to help students to study past sundown without using up the family's fuel supply are just a few examples of the types of problem solving Red Sweater Project loves. Teaching and implementing creative solutions using sustainable technologies, and working with innovative, thoughtful partners are ways we actively practice responsible innovation.</p>
+      <p>Learning to power a computer lab with the sun, to turn waste into compost, and to help students to study past sundown without using up the family's fuel supply are just a few examples of the types of problem solving Red Sweater Project loves. Teaching and implementing creative solutions using sustainable technologies and working with innovative, thoughtful partners are ways we actively practice responsible innovation.</p>
       <br>
       <strong><h5>EXAMPLES CAN BE SEEN THROUGHOUT CAMPUS:</h5></strong>
       <ul>
@@ -80,17 +70,16 @@
         <h5>ALIGNED WITH THE UN’S GOALS FOR SUSTAINABLE DEVELOPMENT</h5>
         <p>The UN has set the new bar for success in global growth by defining 17 goals for sustainable development. At Red Sweater Project, we're delighted that we're already on track.</p>
         <br>
-        <p><a href="#">Explore the Sustainable development goals to guide development actions from 2015-2030 ></a></p>
+        <p><a href="https://sustainabledevelopment.un.org/?menu=1300" target="_blank" class="white-text" style="border-bottom: 1px solid white">Explore the Sustainable Development Goals to guide development actions from 2015-2030 ></a></p>
         <br>
         <strong><h5>HOW WE’RE CREATING CHANGE:</h5></strong>
         <ul>
-          <li>• Increasing access to education is known to also lower poverty rates.</li>
+          <li>• Increasing access to education is known to also lower poverty rates</li>
           <li>• Providing sanitation and health services improves an entire community
-          from within.</li>
+          from within</li>
           <li>• Hunger declines when community members utilize sustainable farming
-          techniques.</li>
-          <li>• Access to renewable energy resources, while teaching responsible
-          consumption protect the environment while increasing access to technology.</li>
+          techniques</li>
+          <li>• Access to renewable energy resources, while teaching responsible consumption, protects the environment and increases access to technology</li>
         </ul>
       </div>
     </div>
