--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -7,9 +7,8 @@
   </div>
 </div>
 
-  <div class="flex page-canvas">
-    <div class="flex-item-1col">
-
+<div class="flex page-canvas">
+  <div class="flex-item-1col">
     <div class="row">
       <div class="col-sm-12">
         <h2>WE'D LOVE TO HEAR FROM YOU</h2>
@@ -23,12 +22,11 @@
             <p><a href="mailto:info@redsweaterprojec.org?subject=General Inquiry"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; General Questions or Ideas</a></p><br/>
           </div>
           <div class="col-sm-6 contact-details">
-            <!-- <p><strong>Let's Be Friends</strong></p> -->
             <div class="social-media-icons">
-              <a href="https://twitter.com/redsweaterpro" target="_blank" class="icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              <a href="https://www.facebook.com/redsweaterproject/" target="_blank" class="icon"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/redsweaterproject/" target="_blank" class="icon"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              <a href="https://vimeo.com/user11394209" target="_blank" class="icon"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/redsweaterpro" target="_blank" class="icon blue-text"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com/redsweaterproject/" target="_blank" class="icon blue-text"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/redsweaterproject/" target="_blank" class="icon blue-text"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a href="https://vimeo.com/user11394209" target="_blank" class="icon blue-text"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -37,8 +35,6 @@
     <div class="row">
       <hr>
       <div class="col-sm-6">
-
-
         <p><strong>Ashley Holmer</strong><br/>
         Founder &amp; Executive Director<br/>
         (503) 956-9390<br/>
@@ -74,10 +70,6 @@
     </div>
   </div>
 </div>
-<!-- </div> -->
-
-
-
 
 <div class="yellow">
   <div class="flex page-canvas nowrap">
