--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -210,9 +210,10 @@
             <a href="/pages/news-testimonials">News</a>
                   </div>
           <div class="social-media-icons">
-            <a href="https://twitter.com/redsweaterpro" target="_blank"><%= image_tag("twitter-icon.png", :class => "img-responsive")%></a>
-            <a href="https://www.facebook.com/redsweaterproject/" target="_blank"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
-            <a href="https://www.instagram.com/redsweaterproject/" target="_blank"><%= image_tag("insta.png", :class => "img-responsive")%></a>
+            <a href="https://twitter.com/redsweaterpro" target="_blank" class="icon white-text"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/redsweaterproject/" target="_blank" class="icon white-text"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/redsweaterproject/" target="_blank" class="icon white-text"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://vimeo.com/user11394209" target="_blank" class="icon white-text"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
           </div>
           <h5 class="copyright"> &copy;2017 Red Sweater Project  |  All Rights Reserved  | Site by JD Design</h5>
         </div>
