--- a/app/assets/stylesheets/sass/1-base/_base.sass
+++ b/app/assets/stylesheets/sass/1-base/_base.sass
@@ -1,4 +1,6 @@
 // RESET BOX-SIZING FOR THE DOC
+$text-blue: #2877A0
+
 *,
 *::before,
 *::after
@@ -57,6 +59,9 @@ header
   height: auto
   h2
     color: white
+
+.blue-text
+  color: $text-blue
 
 .no-top-pad
   padding: 0 30px 0 0
