--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -42,7 +42,8 @@
     <div class="row">
       <% @students.each do |student| %>
         <div class="col-sm-3 sponsor-students">
-          <%= image_tag("#{student.image}.png", :class => "img-responsive img-rounded") %>
+          <a href="../images/bios/<%= student.biolink %>" target="_blank" class="imagelink">
+          <%= image_tag("#{student.image}.png", :class => "img-responsive img-rounded") %></a>
             <h3><strong><%= student.name %></strong></h3>
             <p><%= student.age %> year-old <%= student.gender %></p>
             <p><strong>I want to become: </strong><br/><%= student.dream %></p>
