--- a/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
+++ b/app/assets/stylesheets/sass/3-layouts/_sponsor.sass
@@ -37,6 +37,8 @@
   a
     padding-left: 20px
     padding-bottom: 20px
+  .imagelink
+    padding: 0 !important
 
 .sponsor-project
   min-height: 600px !important
