--- a/app/views/pages/ourstory.html.erb
+++ b/app/views/pages/ourstory.html.erb
@@ -6,9 +6,180 @@
   </div>
 </div>
 <div class="flex page-canvas">
-  <div class="flex-item-1col">
-    <h2>1. QUALITY EDUCATION</h2>
-    <p>Red Sweater Project's focus on quality education has set us apart since the beginning. Our success is not defined by the number of schools that we build, but by the effectiveness of our graduates as leaders in their communities. In 2013, Mungere students scored in the top quarter of schools in our region and second in the district. The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets quick results, while having a long term vision.</p>
+  <div class="col-sm-12 col-sm-offset-1">
+    <h3>IT ALWAYS SEEMS IMPOSSIBLE UNTIL IT’S DONE</h3>
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="lead">In 2005 when Ashley Holmer committed to teaching and coaching soccer for a year in a rural village in Tanzania, she had no idea it would be a life-altering move.</p>
 
+        <p class="lead">Over the course of the year, she lived and worked among the Maasai people. She hauled water for daily use, learned local customs, attended tribal rite of passage celebrations and ceremonies and became fluent in Swahili.</p>
+
+        <p class="lead">She also saw the inequality between boys and girls, specifically in education. When 82% of Tanzanian families can’t afford school fees, sending girls to school isn’t a priority, it’s a burden. And many government schools aren’t safe places for girls. A basic middle and high school education is not accessible to these kids.</p>
+
+        <p class="lead">As a U.S. college all-star soccer player, Ashley quickly earned the respect of the boys in the village on the pitch. Coaching and playing alongside boys, she demonstrated how girls could not only participate, but also compete.</p>
+        <p class="lead">Her leadership as a teacher and an athlete earned the respect of local leaders as well. By the end of 2005, she was asked to start a school in a nearby community. Coming from a family of educators, she understood the exponential benefits of a good education. She said yes.</p>
+      <!-- </div> -->
+      <!-- <div class="col-sm-6"> -->
+        <p><strong>WORKING TOWARD A LEVEL PLAYING FIELD </strong></p>
+
+        <p class="lead">The reality of a level playing field for girls in Tanzania and other East African countries was aspirational at best. But Ashley took on the community’s ask, raising funds for building and opening the first secondary school in Lashaine Village in 2008.</p>
+
+        <p class="lead">But she knew one school wasn’t going to be enough.</p>
+
+        <p class="lead">There’s an entire generation of girls and boys being left behind in Tanzania. Providing education and support to girls, especially those between the ages of 11 and 17, improves individual lives and families, and it has more impact in changing the next generation for the better than any other cause.</p>
+
+        <p class="lead">That’s why Ashley founded the Red Sweater Project in 2011, with the goal of getting as many East African kids as possible in into a school uniform, or “red sweater.” In 2012, Ashley opened the Mungere School, which welcomes a new class of students each year. She’s dedicated herself to developing quality, sustainable and accessible schools for East African children. And she’s just getting started.</p>
+
+      </div>
+
+    </div>
+
+  </div>
+</div>
+<hr>
+<div class="flex page-canvas timeline">
+  <div class="flex-item-1col">
+
+    <div class="row">
+      <h1>OUR TIMELINE</h1>
+      <div class="col-sm-4">
+        <h3>November <br/>2016</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Mungere’s first class sits for their Form IV National Examination.</p>
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>May <br/>2016</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">The fourth class of 25 students joined the Mungere School, for a total of 105 students by mid-2016. </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>March <br/>2016</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">A new teacher office is completed.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>May <br/>2015</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">The third class of 30 students started at the Mungere School.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>April <br/>2015</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">A new two-classroom building is constructed on the Mungere campus.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>November <br/>2014</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Form II Mungere students sit for their first Form II National Examination and score 3rd highest in the Monduli School District.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>September <br/>2013</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Thirty-five students are selected to attend the second class at the Mungere School.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>January <br/>2013</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Form I Classes begin for Mungere’s first 40 students with subject teachers from Tanzania, the United States and Mexico.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>September <br/>2012</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">The Mungere School opens with its first class (of 40 students), thr class="hr-grey"ee international ESL teachers from Ireland and Australia, and health workers from the United States.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>March <br/>2012</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Forty students are selected to attend the first class at Mungere.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>January <br/>2012</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Construction begins on the first two classrooms and offices of the Mungere School.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>June-December <br/>2011</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Ashley Holmer returns to the United States to fundraise for the initial construction of the Mungere School.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>April&mdash;June <br/>2011</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Ashley researches six possible sites for construction of new secondary school in viable areas where there are elementary schools, but no available, affordable school beyond the 6th grade.</p>
+        <p class="lead">In June, an agreement is signed between the government and community members of Mungere Village and Red Sweater Project. The village donated 15 acres of land on which to build the Mungere Secondary School, stewarding the school’s success by participating in construction and operation.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <hr class="hr-grey">
+      <div class="col-sm-4">
+        <h3>January <br/>2011</h3>
+      </div>
+      <div class="col-sm-8">
+        <p class="lead">Ashley Holmer and fellow passionate volunteers form the Red Sweater Project.</p>
+      </div>
+    </div>
   </div>
 </div>
