--- a/app/assets/stylesheets/sass/1-base/_base.sass
+++ b/app/assets/stylesheets/sass/1-base/_base.sass
@@ -61,7 +61,9 @@ header
     color: white
 
 .blue-text
-  color: $text-blue
+  color: $text-blue !important
+  &:hover
+    color: $yellow !important
 
 .no-top-pad
   padding: 0 30px 0 0
