--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -64,7 +64,9 @@
         <br/>
         <p><strong>Tanzania Mailing Address</strong></p>
         <p>
-          PO BOX 123TanzaniaEast Africa
+          PO Box 133<br/>
+          Mto wa Mbu, Monduli District<br/>
+          Arusha, TANZANIA<br/>
         </p>
       </div>
     </div>
