--- a/app/assets/stylesheets/sass/1-base/_buttons.sass
+++ b/app/assets/stylesheets/sass/1-base/_buttons.sass
@@ -65,7 +65,7 @@ $text-blue: #2877A0
     background: tint($body-type-grey, 10%)
     color: #fff
   +button
-// 
+//
 // .btn-donate
 //   border-radius: 25px
 
@@ -75,9 +75,11 @@ $text-blue: #2877A0
   color: white
   padding: 1px auto
   font-size: 1em
+  border-radius: 25px
   &:hover
-    background: tint($yellow, 10%)
-    border-radius: 25px
+    background-color: white
+    color: $yellow
+    border: 1px solid $yellow
 
 #btn-sponsor
   color: $yellow
@@ -85,8 +87,10 @@ $text-blue: #2877A0
   border: 1px solid $yellow
   padding: 1px auto
   font-size: 1em
+  border-radius: 25px
   &:hover
-    border-radius: 25px
+    background-color: $yellow
+    color: white
 
 
 
