--- a/app/assets/stylesheets/sass/2-modules/_banner.sass
+++ b/app/assets/stylesheets/sass/2-modules/_banner.sass
@@ -85,7 +85,7 @@
   -o-background-size: cover
 
 .home
-  background: url(../images/hero/hero_home.jpg) center top
+  background: url(../images/hero/hero_home.jpg) center center
   +banner-image
 
 .donate
