--- a/app/views/pages/ourstory.html.erb
+++ b/app/views/pages/ourstory.html.erb
@@ -6,29 +6,30 @@
   </div>
 </div>
 <div class="flex page-canvas">
-  <div class="col-sm-12 col-sm-offset-1">
-    <h3>IT ALWAYS SEEMS IMPOSSIBLE UNTIL IT’S DONE</h3>
-    <div class="row">
-      <div class="col-sm-12">
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <h3>IT ALWAYS SEEMS IMPOSSIBLE UNTIL IT’S DONE</h3>
+    
         <p class="lead">In 2005 when Ashley Holmer committed to teaching and coaching soccer for a year in a rural village in Tanzania, she had no idea it would be a life-altering move.</p>
-
-        <p class="lead">Over the course of the year, she lived and worked among the Maasai people. She hauled water for daily use, learned local customs, attended tribal rite of passage celebrations and ceremonies and became fluent in Swahili.</p>
-
-        <p class="lead">She also saw the inequality between boys and girls, specifically in education. When 82% of Tanzanian families can’t afford school fees, sending girls to school isn’t a priority, it’s a burden. And many government schools aren’t safe places for girls. A basic middle and high school education is not accessible to these kids.</p>
-
-        <p class="lead">As a U.S. college all-star soccer player, Ashley quickly earned the respect of the boys in the village on the pitch. Coaching and playing alongside boys, she demonstrated how girls could not only participate, but also compete.</p>
-        <p class="lead">Her leadership as a teacher and an athlete earned the respect of local leaders as well. By the end of 2005, she was asked to start a school in a nearby community. Coming from a family of educators, she understood the exponential benefits of a good education. She said yes.</p>
+        <p class="">Over the course of the year, she lived and worked among the Maasai people. She hauled water for daily use, learned local customs, attended tribal rite of passage celebrations and ceremonies and became fluent in Swahili.</p>
+        <br/>
+        <p class="">She also saw the inequality between boys and girls, specifically in education. When 82% of Tanzanian families can’t afford school fees, sending girls to school isn’t a priority, it’s a burden. And many government schools aren’t safe places for girls. A basic middle and high school education is not accessible to these kids.</p>
+        <br/>
+        <p class="">As a U.S. college all-star soccer player, Ashley quickly earned the respect of the boys in the village on the pitch. Coaching and playing alongside boys, she demonstrated how girls could not only participate, but also compete.</p>
+        <br/>
+        <p class="">Her leadership as a teacher and an athlete earned the respect of local leaders as well. By the end of 2005, she was asked to start a school in a nearby community. Coming from a family of educators, she understood the exponential benefits of a good education. She said yes.</p>
       <!-- </div> -->
       <!-- <div class="col-sm-6"> -->
+      <br/>
         <p><strong>WORKING TOWARD A LEVEL PLAYING FIELD </strong></p>
-
-        <p class="lead">The reality of a level playing field for girls in Tanzania and other East African countries was aspirational at best. But Ashley took on the community’s ask, raising funds for building and opening the first secondary school in Lashaine Village in 2008.</p>
-
-        <p class="lead">But she knew one school wasn’t going to be enough.</p>
-
-        <p class="lead">There’s an entire generation of girls and boys being left behind in Tanzania. Providing education and support to girls, especially those between the ages of 11 and 17, improves individual lives and families, and it has more impact in changing the next generation for the better than any other cause.</p>
-
-        <p class="lead">That’s why Ashley founded the Red Sweater Project in 2011, with the goal of getting as many East African kids as possible in into a school uniform, or “red sweater.” In 2012, Ashley opened the Mungere School, which welcomes a new class of students each year. She’s dedicated herself to developing quality, sustainable and accessible schools for East African children. And she’s just getting started.</p>
+        <br/>
+        <p class="">The reality of a level playing field for girls in Tanzania and other East African countries was aspirational at best. But Ashley took on the community’s ask, raising funds for building and opening the first secondary school in Lashaine Village in 2008.</p>
+        <br/>
+        <p class="">But she knew one school wasn’t going to be enough.</p>
+        <br/>
+        <p class="">There’s an entire generation of girls and boys being left behind in Tanzania. Providing education and support to girls, especially those between the ages of 11 and 17, improves individual lives and families, and it has more impact in changing the next generation for the better than any other cause.</p>
+        <br/>
+        <p class="">That’s why Ashley founded the Red Sweater Project in 2011, with the goal of getting as many East African kids as possible in into a school uniform, or “red sweater.” In 2012, Ashley opened the Mungere School, which welcomes a new class of students each year. She’s dedicated herself to developing quality, sustainable and accessible schools for East African children. And she’s just getting started.</p>
 
       </div>
 
