--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -3,8 +3,8 @@
   <div class="shadow-box">
     <div class="banner-content page-canvas page-title">
       <STRONG><h3 class="ltyellow-text">BECAUSE OF RED SWEATER PROJECT:</h3></STRONG>
-      <!-- <h2>Kids in East Africa Have Access To a High School Education</h2> -->
-      <h2>An entire community of children is able to complete high school for the very first time.</h2>
+      <h2>Kids in East Africa Have Access To a High School Education</h2>
+      <!-- <h2>An entire community of children is able to complete high school for the very first time.</h2> -->
     </div>
   </div>
 </div>
